# serializer version: 1
# name: test_sensors[2026-01-09T17:00:00+00:00][sensor.cpc_d_peak_event_begins-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.cpc_d_peak_event_begins',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Peak event begins',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Peak event begins',
    'platform': 'hydroquebec_peak',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'event_begin',
    'unique_id': 'CPC-D_event_begin',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[2026-01-09T17:00:00+00:00][sensor.cpc_d_peak_event_begins-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'timestamp',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'CPC-D Peak event begins',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.cpc_d_peak_event_begins',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2026-01-09T21:00:00+00:00',
  })
# ---
# name: test_sensors[2026-01-09T17:00:00+00:00][sensor.cpc_d_peak_event_ends-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.cpc_d_peak_event_ends',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Peak event ends',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Peak event ends',
    'platform': 'hydroquebec_peak',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'event_end',
    'unique_id': 'CPC-D_event_end',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[2026-01-09T17:00:00+00:00][sensor.cpc_d_peak_event_ends-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'timestamp',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'CPC-D Peak event ends',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.cpc_d_peak_event_ends',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2026-01-10T01:00:00+00:00',
  })
# ---
# name: test_sensors[2026-01-09T22:00:00+00:00][sensor.cpc_d_peak_event_begins-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.cpc_d_peak_event_begins',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Peak event begins',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Peak event begins',
    'platform': 'hydroquebec_peak',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'event_begin',
    'unique_id': 'CPC-D_event_begin',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[2026-01-09T22:00:00+00:00][sensor.cpc_d_peak_event_begins-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'timestamp',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'CPC-D Peak event begins',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.cpc_d_peak_event_begins',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2026-01-09T21:00:00+00:00',
  })
# ---
# name: test_sensors[2026-01-09T22:00:00+00:00][sensor.cpc_d_peak_event_ends-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.cpc_d_peak_event_ends',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Peak event ends',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Peak event ends',
    'platform': 'hydroquebec_peak',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'event_end',
    'unique_id': 'CPC-D_event_end',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[2026-01-09T22:00:00+00:00][sensor.cpc_d_peak_event_ends-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'timestamp',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'CPC-D Peak event ends',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.cpc_d_peak_event_ends',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2026-01-10T01:00:00+00:00',
  })
# ---
